# langchain-lab

./: README.md  pyproject.toml
src/: embeddings-colors.py  embeddings.py  feelings-analysis.py  parameters-module.py  prompt-engineering.py
